--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "convertSvg": "svgr -d public/svg/converted public/svg/original "
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.38.0",
+    "@svgr/cli": "^8.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
