--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.38.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@svgr/cli": "^8.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "5.1.3"
   }
 }
