--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,6 @@
     "convertSvg": "svgr -d public/svg/converted public/svg/original "
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.38.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/cli": "^8.0.1",
     "@types/node": "20.3.1",
@@ -28,5 +27,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.41.1"
   }
 }
